--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,141 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.3.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.8.0
 asgiref==3.8.1
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==25.1.0
 backoff==2.2.1
-bcrypt==4.1.3
-blinker==1.8.2
-build==1.2.1
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
-click==8.1.7
+bcrypt==4.2.1
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
 coloredlogs==15.0.1
-dataclasses-json==0.6.6
-Deprecated==1.2.14
-dnspython==2.6.1
-email_validator==2.1.1
-exceptiongroup==1.2.1
-fastapi==0.111.0
-fastapi-cli==0.0.3
-filelock==3.14.0
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.3.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.29.0
-googleapis-common-protos==1.63.0
-grpcio==1.63.0
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+durationpy==0.9
+exceptiongroup==1.2.2
+fastapi==0.115.8
+filelock==3.17.0
+flatbuffers==25.2.10
+frozenlist==1.5.0
+fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
 h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.28.1
 humanfriendly==10.0
-idna==3.7
-importlib-metadata==7.0.0
-importlib_resources==6.4.0
-install==1.3.5
-Jinja2==3.1.4
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
+Jinja2==3.1.5
 jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-kubernetes==29.0.0
-langchain==0.1.19
-langchain-chroma==0.1.0
-langchain-community==0.0.38
-langchain-core==0.1.52
-langchain-experimental==0.0.58
-langchain-text-splitters==0.0.1
-langsmith==0.1.56
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kubernetes==32.0.0
+langchain==0.3.18
+langchain-chroma==0.2.1
+langchain-community==0.3.17
+langchain-core==0.3.34
+langchain-experimental==0.3.4
+langchain-ollama==0.2.3
+langchain-text-splitters==0.3.6
+langsmith==0.3.8
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.2
+MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
-mmh3==4.1.0
+mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
-multidict==6.0.5
+multidict==6.1.0
 mypy-extensions==1.0.0
+narwhals==1.26.0
 numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.17.3
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-asgi==0.45b0
-opentelemetry-instrumentation-fastapi==0.45b0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-opentelemetry-util-http==0.45b0
-orjson==3.10.3
+ollama==0.4.7
+onnxruntime==1.20.1
+opentelemetry-api==1.30.0
+opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-grpc==1.30.0
+opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation-asgi==0.51b0
+opentelemetry-instrumentation-fastapi==0.51b0
+opentelemetry-proto==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+opentelemetry-util-http==0.51b0
+orjson==3.10.15
 overrides==7.7.0
-packaging==23.2
-pandas==2.2.2
-pillow==10.3.0
-posthog==3.5.0
-protobuf==4.25.3
-pulsar-client==3.5.0
-pyarrow==16.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.0
-Pygments==2.18.0
-pypdf==4.2.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+posthog==3.12.1
+propcache==0.2.1
+protobuf==5.29.3
+pyarrow==19.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pypdf==5.3.0
 PyPika==0.48.9
-pyproject_hooks==1.1.0
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-referencing==0.35.1
-requests==2.31.0
+pytz==2025.1
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
 requests-oauthlib==2.0.0
-rich==13.7.1
-rpds-py==0.18.1
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.22.3
 rsa==4.9
 shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.30
-starlette==0.37.2
+SQLAlchemy==2.0.38
+starlette==0.45.3
 stqdm==0.0.5
-streamlit==1.34.0
-sympy==1.12
-tenacity==8.3.0
-tokenizers==0.19.1
+streamlit==1.42.0
+sympy==1.13.3
+tenacity==9.0.0
+tokenizers==0.21.0
 toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.4
-typer==0.12.3
+tomli==2.2.1
+tornado==6.4.2
+tqdm==4.67.1
+typer==0.15.1
 typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-ujson==5.9.0
-urllib3==2.2.1
-uvicorn==0.29.0
-uvloop==0.19.0
-watchdog==4.0.0
-watchfiles==0.21.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
 websocket-client==1.8.0
-websockets==12.0
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.18.1
+websockets==14.2
+wrapt==1.17.2
+yarl==1.18.3
+zipp==3.21.0
+zstandard==0.23.0
